--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,9 @@
-<!--
-<table mat-table [dataSource]="giveAways" class="mat-elevation-z8">
-
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container>
-  
-
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-    </ng-container>
-  
-
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> Title </th>
-      <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-    </ng-container>
-
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
--->
-
 <div class="giveaway-tracker">
-    <p class="giveaway-tracker__header">
-        <app-header></app-header>
-    </p>
+  <div class="giveaway-tracker__header">
+    <app-header></app-header>
+  </div>
 
-    <p class="giveaway-tracker__content">
-        <mat-grid-list cols="2" rowHeight="2:1">
-            <mat-grid-tile>1</mat-grid-tile>
-            <mat-grid-tile>2</mat-grid-tile>
-            <mat-grid-tile>3</mat-grid-tile>
-            <mat-grid-tile>4</mat-grid-tile>
-          </mat-grid-list>
-    </p>
+  <div class="giveaway-tracker__content">
+    <app-content></app-content>
+  </div>
 </div>
