--- a/src/app/components/content/list/list.component.html
+++ b/src/app/components/content/list/list.component.html
@@ -1,11 +1,15 @@
 <!-- Card: https://material.angular.io/components/card/overview -->
-<div class="container">
-    <mat-card *ngFor="let giveaway of giveaways" class="example-card">
-        <img mat-card-image src="{{ giveaway.image }}" alt="image failed to load">
-        <mat-card-content>
-            <p>
-                {{ giveaway.description }}
-            </p>
-        </mat-card-content>
-    </mat-card>
+<div class="grid-container">
+    <div fxLayout="row wrap" fxLayoutGap="16px grid">
+        <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let giveaway of giveaways">
+            <mat-card class="mat-elevation-z4">
+                <img mat-card-image src="{{ giveaway.image }}" alt="image failed to load">
+                <mat-card-content>
+                    <p>
+                        {{ giveaway.description }}
+                    </p>
+                </mat-card-content>
+            </mat-card>
+        </div>
+    </div>
 </div>
