--- a/src/app/components/content/list/list.component.scss
+++ b/src/app/components/content/list/list.component.scss
@@ -1,27 +1,21 @@
-.container {
-    display: grid;
-    grid-gap: 1rem;  
-    
-    mat-card {
-        margin: 1rem;
-        border: 1px solid white;
-
-        img {
-            // height: 5rem;
-            width: 6rem
-        }
-
-        mat-card-content {
-            text-overflow: ellipsis;
-        }
-    }
+.grid-container {
+    padding: 16px;
 }
 
-@media (min-width: 900px) {
-    .container { grid-template-columns: repeat(3, 1fr); }
-  }
+mat-card {
+    border: 1px solid white;
 
+    img {
+        height: 10rem;
+        object-fit: cover;
+    }
 
-  @media (min-width: 600px) {
-    .container { grid-template-columns: repeat(2, 1fr); }
-  }
+    mat-card-content > p {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2; /* number of lines to show */
+        line-clamp: 2; 
+        -webkit-box-orient: vertical;
+    }
+}
