--- a/src/app/components/content/list/list.component.html
+++ b/src/app/components/content/list/list.component.html
@@ -2,11 +2,16 @@
 <div class="grid-container">
     <div fxLayout="row wrap" fxLayoutGap="16px grid">
         <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let giveaway of giveaways">
-            <mat-card class="mat-elevation-z4">
+            <mat-card>
                 <img mat-card-image src="{{ giveaway.image }}" alt="image failed to load">
-                <mat-card-content>
-                    <p>
-                        {{ giveaway.description }}
+                <mat-card-title>{{ giveaway.title }}</mat-card-title>
+                <mat-card-subtitle>{{ giveaway.type }}</mat-card-subtitle>
+                <mat-card-content fxLayout="column" fxLayoutAlign="flex-end">
+                    <p class="platform">
+                        {{ giveaway.platforms }}
+                    </p>
+                    <p class="description">
+                        {{ giveaway.worth }}
                     </p>
                 </mat-card-content>
             </mat-card>
