--- a/src/app/components/content/list/list.component.scss
+++ b/src/app/components/content/list/list.component.scss
@@ -3,11 +3,27 @@
 }
 
 mat-card {
-    border: 1px solid white;
+    border: 1px solid var(--primary);
+    background-color: var(--foreground-dark);
+    cursor: pointer;
 
     img {
         height: 10rem;
         object-fit: cover;
+    }
+
+    mat-card-content {
+        height: 5rem;
+
+        .platform {
+            color: var(--grey);
+            font-size: .9rem;
+        }
+
+        .description {
+            color: var(--primary);
+            font-size: 1rem;
+        }
     }
 
     mat-card-content > p {
@@ -18,4 +34,29 @@ mat-card {
         line-clamp: 2; 
         -webkit-box-orient: vertical;
     }
+
+    mat-card-title {
+        font-size: 1rem;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1; /* number of lines to show */
+        line-clamp: 1; 
+        -webkit-box-orient: vertical;
+    }
+
+    mat-card-subtitle {
+        font-size: .9rem;
+        color: var(--foreground-light);
+        font-weight: 500;
+    }
 }
+
+mat-card:hover > img {
+    opacity: .7;
+}
+
+::ng-deep .mat-card-header-text {
+    /* CSS styles go here */
+    margin: 0px; // for example to remove the margin
+  }
