--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root {
-    --background: #222831; 
-    --foreground-dark: #393E46;
-    --foreground-light: #00ADB5;
-    --grey: #6D8299;
-    --primary: #EEEEEE;
+    --background: #1F1D36; 
+    --foreground-dark: #3F3351;
+    --foreground-light: #864879;
+    --grey: #C9CCD5;
+    --primary: #E9A6A6;
+    --white: #F7F6F2;
 }
 
 html, body { height: 100%; }
