Sort in progress

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -3,6 +3,7 @@
         <app-filter [giveaways]="giveAways"></app-filter>
     </div>
     <div class="content__list">
+        <app-sort [giveaways]="giveAways"></app-sort>
         <app-list [giveaways]="giveAways"></app-list>
     </div>
 </div>
