--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -9,7 +9,7 @@
 
     .category-title {
         color: var(--primary);
-        font-weight: bold;
+        font-weight: 500;
         font-size: 1rem;
     }
 
