--- a/src/app/components/content/sort/sort.component.scss
+++ b/src/app/components/content/sort/sort.component.scss
@@ -1,9 +1,9 @@
 .sort {
     width: 100%;
     padding: 16px 16px 0 16px;
+    color: var(--white);
 
     .results {
-        color: var(--primary);
         font-weight: 500;
         font-size: 1rem;
     }
