--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -1,16 +1,19 @@
 .filter-container {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 1rem;
     margin: 1rem 0 1rem 1rem;
     background-color: var(--foreground-dark);
     padding: 1rem;
     width: 220px;
 
     .category-title {
-        color: var(--primary);
+        color: var(--white);
         font-weight: 500;
         font-size: 1rem;
+    }
+
+    .show-hide {
+        width: 100%;
+        color: var(--primary);
+        font-size: .9rem;
     }
 
     .example-radio-group {
