--- a/src/app/components/content/list/list.component.html
+++ b/src/app/components/content/list/list.component.html
@@ -11,7 +11,12 @@
                         {{ giveaway.platforms }}
                     </p>
                     <p class="description">
-                        {{ giveaway.worth }}
+                        <span class="free">
+                            FREE
+                        </span>
+                        <span class="worth">
+                            {{ giveaway.worth }}
+                        </span>
                     </p>
                 </mat-card-content>
             </mat-card>
