--- a/src/app/components/content/list/list.component.scss
+++ b/src/app/components/content/list/list.component.scss
@@ -22,6 +22,16 @@ mat-card {
         .description {
             color: var(--primary);
             font-size: 1rem;
+
+            .free {
+                color: var(--background);
+                margin-right: 1rem;
+            }
+
+            .worth {
+                text-decoration: line-through;
+                font-size: .9rem;
+            }
         }
     }
 
@@ -56,6 +66,5 @@ mat-card:hover > img {
 }
 
 ::ng-deep .mat-card-header-text {
-    /* CSS styles go here */
-    margin: 0px; // for example to remove the margin
+    margin: 0px;
   }
