--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
   </div>
 
   <div class="giveaway-tracker__content">
-    <app-content></app-content>
+    <router-outlet></router-outlet>
   </div>
 </div>
