--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
     --foreground-dark: #3F3351;
     --foreground-light: #864879;
     --grey: #C9CCD5;
-    --primary: #E9A6A6;
+    --primary: #B983FF;
     --white: #F7F6F2;
 }
 
