--- a/src/app/components/content/list/list.component.scss
+++ b/src/app/components/content/list/list.component.scss
@@ -24,13 +24,18 @@ mat-card {
             font-size: 1rem;
 
             .free {
-                color: var(--background);
+                color: var(--white);
                 margin-right: 1rem;
             }
 
             .worth {
                 text-decoration: line-through;
                 font-size: .9rem;
+                color: var(--foreground-light);
+
+                &.na {
+                    text-decoration: unset;
+                }
             }
         }
     }
@@ -56,7 +61,7 @@ mat-card {
 
     mat-card-subtitle {
         font-size: .9rem;
-        color: var(--foreground-light);
+        color: var(--primary);
         font-weight: 500;
     }
 }
