--- a/src/app/components/content/sort/sort.component.scss
+++ b/src/app/components/content/sort/sort.component.scss
@@ -1,7 +1,7 @@
 .sort {
     width: 100%;
     padding: 16px 16px 0 16px;
-    color: var(--white);
+    color: var(--primary);
 
     .results {
         font-weight: 500;
