--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,8 +6,8 @@ mat-toolbar {
   }
 
   .title {
-    color: var(--white);
-    font-weight: bold;
+    color: var(--primary);
+    font-weight: 500;
     font-size: 1.5rem;
     letter-spacing: 1px;
   }
