--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content" fxLayout="row">
     <div class="content__filter" fxShow fxHide.sm fxHide.xs>
         <app-filter [giveaways]="giveAways"></app-filter>
     </div>
