--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -1,9 +1,12 @@
+@import '../../../../variables.scss';
+
 .filter-container {
     margin: 1rem 0 1rem 1rem;
     background-color: var(--foreground-dark);
     padding: 1rem;
     width: 220px;
     border-radius: 5px;
+    margin-bottom: calc(#{$footerHeight} + #{$defaultPadding});
 
     .category-title {
         color: var(--primary);
