--- a/src/app/components/content/sort/sort.component.scss
+++ b/src/app/components/content/sort/sort.component.scss
@@ -1,10 +1,11 @@
 .sort {
     width: 100%;
     padding: 16px 16px 0 16px;
-    color: var(--primary);
+    color: var(--white);
 
     .results {
         font-weight: 500;
         font-size: 1rem;
     }
+
 }
