--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,8 @@
   <div class="giveaway-tracker__content">
     <router-outlet></router-outlet>
   </div>
+
+  <div class="giveaway-tracker__footer">
+    <app-footer></app-footer>
+  </div>
 </div>
