--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -1,7 +1,26 @@
-<p>
-    {{ giveaway!.id }}
-</p>
+<div class="details-container">
 
-<button mat-button routerLink="/">
-    back
-</button>
+    <mat-card *ngIf="giveaway">
+        <img mat-card-image src="{{ giveaway.thumbnail }}" alt="image failed to load">
+        <mat-card-title>{{ giveaway.title }}</mat-card-title>
+        <mat-card-subtitle>{{ giveaway.type }}</mat-card-subtitle>
+        <mat-card-content fxLayout="column" fxLayoutAlign="flex-end">
+            <p class="platform">
+                {{ giveaway.platforms }}
+            </p>
+            <p class="description">
+                <span class="free">
+                    FREE
+                </span>
+                <span class="worth" [class.na]="giveaway.worth === 'N/A'">
+                    {{ giveaway.worth }}
+                </span>
+            </p>
+        </mat-card-content>
+    </mat-card>
+
+    <button mat-button routerLink="/">
+        back
+    </button>
+</div>
+
