--- a/src/app/components/content/sort/sort.component.html
+++ b/src/app/components/content/sort/sort.component.html
@@ -1,6 +1,6 @@
 <div class="sort" fxFlex fxLayoutAlign="space-between">
     <div class="results" fxLayout="column" fxLayoutAlign="center">
-        Results found: {{ giveaways.length || 0 }}
+        Results found: {{ giveaways?.length || 0 }}
     </div>
 
     <div class="sort-area">
