--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,7 +4,7 @@ mat-toolbar {
     bottom: 0;
   
     .source {
-        color: var(--primary);
+        color: var(--white);
         font-size: 1rem;
         font-weight: 500;
         text-decoration: unset;
