--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar>
-    <span class="title">Giveaway Tracker</span>
-    <span class="spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-        <mat-icon>favorite</mat-icon>
+    <button class="title" (click)="goBack()" mat-button>
+        <mat-icon>track_changes</mat-icon>
+        Giveaway Tracker
     </button>
+    <span class="spacer"></span>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
         <mat-icon>share</mat-icon>
     </button>
