--- a/src/app/components/details/details.component.scss
+++ b/src/app/components/details/details.component.scss
@@ -1,76 +1,129 @@
+@import '../../../variables.scss';
+
 .details-container {
-    padding: 16px;
+    padding: $defaultPadding;
     margin-bottom: 80px;
 
     mat-card {
         background-color: var(--foreground-dark);
-        cursor: pointer;
-    
-        img {
-            height: 12rem;
-            object-fit: cover;
-        }
-    
-        mat-card-content {
-            height: 5rem;
-    
-            .platform {
-                color: var(--grey);
-                font-size: .9rem;
+
+        mat-card-header {
+            margin-bottom: 16px;
+
+            img {
+                object-fit: contain;
+                border-radius: 5px;
             }
-    
-            .description {
-                color: var(--primary);
-                font-size: 1rem;
-    
-                .free {
-                    color: var(--white);
-                    margin-right: 1rem;
+
+            .header-content {
+                margin-left: 16px;
+                display: flex;
+                flex-direction: column;
+
+                mat-card-title {
+                    font-size: 1.2rem;
+                    line-height: 1.5rem;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 1; /* number of lines to show */
+                    line-clamp: 1; 
+                    -webkit-box-orient: vertical;
                 }
-    
-                .worth {
-                    text-decoration: line-through;
+            
+                mat-card-subtitle {
+                    font-size: 1rem;
+                    line-height: 1.2rem;
+                    color: var(--primary);
+                    font-weight: 500;
+                }
+
+                .platform {
+                    color: var(--grey);
                     font-size: .9rem;
-                    color: var(--foreground-light);
-    
-                    &.na {
-                        text-decoration: unset;
+                    margin-bottom: .5rem;
+                }
+        
+                .description {
+                    color: var(--primary);
+                    font-size: 1rem;
+                    margin-bottom: 1rem !important;
+        
+                    .free {
+                        color: var(--white);
+                        margin-right: .5rem;
+                        font-weight: 500;
+                    }
+        
+                    .worth {
+                        text-decoration: line-through;
+                        font-size: .9rem;
+                        color: var(--foreground-light);
+        
+                        &.na {
+                            text-decoration: unset;
+                        }
                     }
                 }
             }
+
+            .obtain {
+                border-radius: 5px;
+                background-color: var(--background);
+                color: var(--white);
+                padding: $defaultPadding;
+
+                .obtain-button {
+                    color: var(--white);
+                    background-color: var(--foreground-light);
+                    height: 3rem;
+                    width: 16rem;
+                    border-radius: 5px;
+                    margin-top: .5rem;
+                    margin-bottom: .5rem;
+                    font-size: 1.2rem;
+                    border: 1px solid var(--white);
+                }
+
+                .obtain-info {
+                    color: var(--grey);
+                    border: 1px solid var(--white);
+                    border-radius: 5px;
+                    height: 2rem;
+                    width: 16rem;
+                    margin: 0;
+                }
+            }
         }
     
-        mat-card-content > p {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2; /* number of lines to show */
-            line-clamp: 2; 
-            -webkit-box-orient: vertical;
-        }
-    
-        mat-card-title {
-            font-size: 1rem;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 1; /* number of lines to show */
-            line-clamp: 1; 
-            -webkit-box-orient: vertical;
-        }
-    
-        mat-card-subtitle {
+        mat-card-content {
+            margin-top: $defaultPadding;
+            white-space: pre-line;
+            color: var(--white);
             font-size: .9rem;
-            color: var(--primary);
-            font-weight: 500;
+            line-height: 1.5rem;
+
+            .instructions {
+                ::ng-deep a {
+                    color: var(--primary) !important;
+                    text-decoration: unset;
+                }
+            }
+
+            .how-to-get {
+                color: var(--primary);
+                font-weight: 500;
+                margin-bottom: 1rem;
+                font-size: 1.2rem;
+            }
         }
     }
-    
-    mat-card:hover > img {
-        opacity: .7;
-    }
-    
+
     ::ng-deep .mat-card-header-text {
         margin: 0px;
-      }
+    }
 }
+
+.spacer {
+    flex: 1 1 auto;
+  }
