--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,9 +6,14 @@ mat-toolbar {
   }
 
   .title {
-    color: var(--primary);
+    color: var(--white);
     font-weight: 500;
     font-size: 1.5rem;
     letter-spacing: 1px;
+
+    mat-icon {
+      font-size: 1.2rem;
+      font-weight: normal;
+    }
   }
 }
