--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
     --background: #1F1D36; 
     --foreground-dark: #3F3351;
     --foreground-light: #864879;
-    --grey: #C9CCD5;
+    --grey: #B2B1B9;
     --primary: #B983FF;
     --white: #F7F6F2;
 }
@@ -15,6 +15,8 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: var(--background);
     color: var(--primary);
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 body::-webkit-scrollbar {
