Image error callback, design

--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -18,7 +18,7 @@
         width: 100%;
         color: var(--primary);
         font-size: .9rem;
-        margin-bottom: 1rem;
+        margin-bottom: 15px;
     }
 
     .example-radio-group {
