--- a/src/app/components/content/list/list.component.html
+++ b/src/app/components/content/list/list.component.html
@@ -3,7 +3,7 @@
     <div fxLayout="row wrap" fxLayoutGap="16px grid">
         <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" *ngFor="let giveaway of giveaways">
             <mat-card routerLink="/details/{{ giveaway.id }}">
-                <img mat-card-image src="{{ giveaway.image }}" alt="image failed to load">
+                <img mat-card-image src="{{ giveaway.image }}" (error)="onImageLoadingFailed($event)" alt="image failed to load">
                 <mat-card-title>{{ giveaway.title }}</mat-card-title>
                 <mat-card-subtitle>{{ giveaway.type }}</mat-card-subtitle>
                 <mat-card-content fxLayout="column" fxLayoutAlign="flex-end">
