--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root {
-    --background: #1F1D36; 
-    --foreground-dark: #3F3351;
-    --foreground-light: #864879;
+    --background: #1B262C; 
+    --foreground-dark: #0F4C75;
+    --foreground-light: #3282B8;
     --grey: #B2B1B9;
-    --primary: #B983FF;
+    --primary: #BBE1FA;
     --white: #F7F6F2;
 }
 
