--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -3,20 +3,20 @@
 .filter-container {
     margin: 1rem 0 1rem 1rem;
     background-color: var(--foreground-dark);
+    color: var(--white);
     padding: 1rem;
     width: 220px;
     border-radius: 5px;
     margin-bottom: calc(#{$footerHeight} + #{$defaultPadding});
 
     .category-title {
-        color: var(--primary);
         font-weight: 500;
         font-size: 1rem;
     }
 
     .show-hide {
         width: 100%;
-        color: var(--primary);
+        color: var(--foreground-light);
         font-size: .9rem;
         margin-bottom: 15px;
     }
