--- a/src/app/components/content/list/list.component.html
+++ b/src/app/components/content/list/list.component.html
@@ -1,25 +1,11 @@
 <!-- Card: https://material.angular.io/components/card/overview -->
 <div class="grid-container">
     <div fxLayout="row wrap" fxLayoutGap="16px grid">
+
+        <app-empty-list-item *ngIf="giveaways.length === 0"></app-empty-list-item>
+
         <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="50%" *ngFor="let giveaway of giveaways">
-            <mat-card routerLink="/details/{{ giveaway.id }}">
-                <img mat-card-image src="{{ giveaway.image }}" (error)="onImageLoadingFailed($event)" alt="image failed to load">
-                <mat-card-title>{{ giveaway.title }}</mat-card-title>
-                <mat-card-subtitle>{{ giveaway.type }}</mat-card-subtitle>
-                <mat-card-content fxLayout="column" fxLayoutAlign="flex-end">
-                    <p class="platform">
-                        {{ giveaway.platforms }}
-                    </p>
-                    <p class="description">
-                        <span class="free">
-                            FREE
-                        </span>
-                        <span class="worth" [class.na]="giveaway.worth === 'N/A'">
-                            {{ giveaway.worth }}
-                        </span>
-                    </p>
-                </mat-card-content>
-            </mat-card>
+            <app-list-item [giveaway]="giveaway"></app-list-item>
         </div>
     </div>
 </div>
