--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,7 +6,7 @@ mat-toolbar {
   }
 
   .title {
-    color: var(--primary);
+    color: var(--white);
     font-weight: 500;
     font-size: 1.5rem;
     letter-spacing: 1px;
