--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root {
-    --background: #1B262C; 
-    --foreground-dark: #0F4C75;
-    --foreground-light: #3282B8;
+    --background: #222831; 
+    --foreground-dark: #393E46;
+    --foreground-light: #FE8F8F;
     --grey: #B2B1B9;
-    --primary: #BBE1FA;
+    --primary: #9b9090;
     --white: #F7F6F2;
 }
 
