--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 :root {
     --background: #222831; 
     --foreground-dark: #393E46;
-    --foreground-light: #FE8F8F;
+    --foreground-light: #40C4FF;
     --grey: #B2B1B9;
     --primary: #9b9090;
     --white: #F7F6F2;
