--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -12,6 +12,7 @@
     .category-title {
         font-weight: 500;
         font-size: 1rem;
+        color: var(--foreground-light);
     }
 
     .show-hide {
