Giveaway banner added, other design improvements

--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -4,6 +4,7 @@
     </div>
     <div class="content__list">
         <app-sort [giveaways]="giveAways"></app-sort>
+        <app-hot-giveaways></app-hot-giveaways>
         <app-list [giveaways]="giveAways"></app-list>
     </div>
 </div>
