--- a/src/app/components/content/filter/filter.component.html
+++ b/src/app/components/content/filter/filter.component.html
@@ -1,6 +1,9 @@
 <div class="filter-container">
 
-    <label class="category-title">Platforms</label>
+    <label class="category-title" fxLayout="row" fxLayoutAlign="start center"
+        matTooltip="Select an option to filter for platform">
+        <mat-icon>computer</mat-icon>Platforms
+    </label>
     <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group"
         [(ngModel)]="selectedPlatform">
         <mat-radio-button class="example-radio-button" [value]="platform.key" (click)="setPlatform(platform.key)"
@@ -16,7 +19,10 @@
         </mat-icon>
     </button>
 
-    <label class="category-title">Type</label>
+    <label class="category-title" fxLayout="row" fxLayoutAlign="start center"
+        matTooltip="Select an option to filter for giveaway type">
+        <mat-icon>category</mat-icon>Type
+    </label>
     <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" [(ngModel)]="selectedType">
         <mat-radio-button class="example-radio-button" *ngFor="let type of types | keyvalue"
             (click)="setGameType(type.key)" [value]="type.key">
