--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -13,6 +13,12 @@
         font-weight: 500;
         font-size: 1rem;
         color: var(--foreground-light);
+        cursor: help;
+
+        mat-icon {
+          font-size: 1.2rem;
+          margin-right: .2rem;
+        }
     }
 
     .show-hide {
