--- a/src/app/components/content/empty-list-item/empty-list-item.component.scss
+++ b/src/app/components/content/empty-list-item/empty-list-item.component.scss
@@ -2,6 +2,6 @@ mat-card {
     background-color: var(--foreground-dark);
 
     mat-card-subtitle {
-        margin: 1rem;
+        margin: 2rem 1rem 2rem 1rem;
     }
 }
