--- a/src/app/components/content/hot-giveaways/hot-giveaways.component.scss
+++ b/src/app/components/content/hot-giveaways/hot-giveaways.component.scss
@@ -20,14 +20,14 @@
             width: 60%;
             text-transform: uppercase;
             text-align: center;
-            color: var(--background);
+            color: var(--foreground-light);
             font-weight: 500;
             font-size: 2.5rem;
-            line-height: 3rem;
-            text-shadow: 1px  1px 2px var(--white), 
-                         1px -1px 2px var(--white), 
-                         -1px  1px 2px var(--white), 
-                         -1px -1px 2px var(--white); 
+            line-height: 3.5rem;
+            text-shadow: 1px  1px 2px var(--background), 
+            1px -1px 2px var(--background), 
+            -1px  1px 2px var(--background), 
+            -1px -1px 2px var(--background); 
 
             .choose-text {
                 margin-top: 2rem;
@@ -61,6 +61,14 @@
             margin-bottom: .5rem;
             font-size: 1.2rem;
             border: 1px solid var(--white);
+        }
+    }
+
+    .giveaway:hover {
+        opacity: .7;
+
+        .detail-button {
+            opacity: 1;
         }
     }
 }
