--- a/src/app/components/content/hot-giveaways/hot-giveaways.component.scss
+++ b/src/app/components/content/hot-giveaways/hot-giveaways.component.scss
@@ -1,74 +1,38 @@
-@import '../../../../variables.scss';
+$swiper-height: 280px;
 
 .hot-giveaways {
-    height: 250px;
-    display: grid;
-    margin: 1rem 1rem 0 1rem;
-    border-radius: 5px;
-    cursor: pointer;
+    max-width: 800px;
+    // margin: 1rem;
+    padding: 1rem;
+    // background-color: magenta;
+    height: $swiper-height + 40px;
+}
 
-    .banner {
-        background: url('../../../../assets/banner.jpg') no-repeat;
-        background-size: 100%;
-        position: relative;
+.swiper {
+    width: 100%;
+    padding: 1rem;
+  height: $swiper-height;
+  background-color: var(--foreground-dark);
+}
 
-        .banner-text {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            width: 60%;
-            text-transform: uppercase;
-            text-align: center;
-            color: var(--foreground-light);
-            font-weight: 500;
-            font-size: 2.5rem;
-            line-height: 3.5rem;
-            text-shadow: 1px  1px 2px var(--background), 
-            1px -1px 2px var(--background), 
-            -1px  1px 2px var(--background), 
-            -1px -1px 2px var(--background); 
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-            .choose-text {
-                margin-top: 2rem;
-                font-size: 1.5rem;
-                color: var(--white);
+  .swiper-zoom-container {
+    height: 200px;
+  }
+}
 
-                text-shadow: 1px  1px 2px var(--background), 
-                1px -1px 2px var(--background), 
-                -1px  1px 2px var(--background), 
-                -1px -1px 2px var(--background); 
-            }
-        }
-    }
-
-    .giveaway {
-        background-repeat: no-repeat;
-        background-size: cover;
-        overflow: hidden;
-        position: relative;
-
-        .detail-button {
-            position: absolute;
-            left: 1rem;
-            bottom: 1rem;
-            color: var(--white);
-            background-color: var(--foreground-light);
-            height: 3rem;
-            width: 16rem;
-            border-radius: 5px;
-            margin-top: .5rem;
-            margin-bottom: .5rem;
-            font-size: 1.2rem;
-            border: 1px solid var(--white);
-        }
-    }
-
-    .giveaway:hover {
-        opacity: .7;
-
-        .detail-button {
-            opacity: 1;
-        }
-    }
+.title {
+  text-align: center;
+  color: var(--foreground-light);
+  font-weight: 500;
+  font-size: 1rem;
 }
