--- a/src/app/components/content/hot-giveaways/hot-giveaways.component.html
+++ b/src/app/components/content/hot-giveaways/hot-giveaways.component.html
@@ -1,72 +1,13 @@
-<div class="hot-giveaways">
-  <swiper
-  style="--swiper-navigation-color: #fff;--swiper-pagination-color: #fff"
-  [zoom]="true"
-  [navigation]="true"
-  [centeredSlides]="true"
-  [pagination]="{
-    clickable: true
-  }"
-  class="mySwiper"
->
-    <ng-template swiperSlide *ngFor="let giveaway of hotGiveaways">
-      <div class="title" data-swiper-parallax="-300">{{ giveaway.name }}</div>
-      <div class="swiper-zoom-container">
-
-        <!-- Required swiper-lazy class and image source specified in data-src attribute -->
-        <img data-src="{{ giveaway.url }}"/>
-      </div> 
-
-    </ng-template>
-  </swiper>
-
-  <!--
-    <swiper
-    style="--swiper-navigation-color: #fff;--swiper-pagination-color: #fff"
-    [zoom]="true"
-    [navigation]="true"
-    [pagination]="{
-      clickable: true
-    }"
-    class="mySwiper"
-  >
-    <ng-template swiperSlide>
-      <div class="swiper-zoom-container">
-        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-      </div> </ng-template
-    ><ng-template swiperSlide>
-      <div class="swiper-zoom-container">
-        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-      </div> </ng-template
-    ><ng-template swiperSlide>
-      <div class="swiper-zoom-container">
-        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-      </div> </ng-template
-    ><ng-template swiperSlide>
-      <div class="swiper-zoom-container">
-        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
-      </div> </ng-template
-    ><ng-template swiperSlide>
-      <div class="swiper-zoom-container">
-        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-      </div> </ng-template
-    ><ng-template swiperSlide>
-      <div class="swiper-zoom-container">
-        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-      </div> </ng-template
-    ><ng-template swiperSlide>
-      <div class="swiper-zoom-container">
-        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-      </div> </ng-template
-    ><ng-template swiperSlide>
-      <div class="swiper-zoom-container">
-        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-      </div> </ng-template
-    ><ng-template swiperSlide>
-      <div class="swiper-zoom-container">
-        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
-      </div>
-    </ng-template>
-  </swiper>
-  -->
-</div>
+<swiper [effect]="'coverflow'"
+  [grabCursor]="true" [centeredSlides]="true" [slidesPerView]="'auto'" [coverflowEffect]="{
+  rotate: 50,
+  stretch: 0,
+  depth: 100,
+  modifier: 1,
+  slideShadows: true
+}" [pagination]="true">
+  <ng-template swiperSlide *ngFor="let giveaway of hotGiveaways">
+    <div class="title" data-swiper-parallax="-300">{{ giveaway.name }}</div>
+    <img src="{{ giveaway.url }}" />
+  </ng-template>
+</swiper>
