--- a/src/app/components/content/hot-giveaways/hot-giveaways.component.scss
+++ b/src/app/components/content/hot-giveaways/hot-giveaways.component.scss
@@ -1,38 +1,33 @@
-$swiper-height: 280px;
-
-.hot-giveaways {
-    max-width: 800px;
-    // margin: 1rem;
-    padding: 1rem;
-    // background-color: magenta;
-    height: $swiper-height + 40px;
-}
-
 .swiper {
-    width: 100%;
-    padding: 1rem;
-  height: $swiper-height;
+  width: 800px;
+  height: 300px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: var(--foreground-dark);
-}
+  border-radius: 5px;
+  margin-left: 1rem;
+  margin-right: 1rem;
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  text-align: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .swiper-zoom-container {
-    height: 200px;
+  /*
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 300px;
+  
+    .title {
+      text-align: center;
+      color: var(--foreground-light);
+      font-weight: 500;
+      font-size: 1rem;
+    }
+  
+    img {
+      display: block;
+      width: auto;
+      min-height: 200px;
+    }
   }
+  */
 }
 
-.title {
-  text-align: center;
-  color: var(--foreground-light);
-  font-weight: 500;
-  font-size: 1rem;
-}
