--- a/src/app/components/content/hot-giveaways/hot-giveaways.component.scss
+++ b/src/app/components/content/hot-giveaways/hot-giveaways.component.scss
@@ -30,9 +30,9 @@
 .swiper-slide img {
   display: block;
   width: 100%;
-  // max-height: 210px;
 }
 
+/*
 @media only screen and (min-width: 769px) {
   .swiper-slide:first-child {
     transition: transform 100ms;
@@ -68,3 +68,4 @@
     transform: translateX(-55%);
   }
 }
+*/
