--- a/src/app/components/content/hot-giveaways/hot-giveaways.component.html
+++ b/src/app/components/content/hot-giveaways/hot-giveaways.component.html
@@ -1,6 +1,6 @@
 <swiper [style.width.px]="swiperWidth" [slidesPerView]="slidesPerView" [centeredSlides]="false" [slidesPerGroup]="slidesPerGroup" [grabCursor]="true" [keyboard]="{
       enabled: true
-    }" style="--swiper-navigation-color: #fff;--swiper-pagination-color: #fff" [autoplay]="{
+    }" style="--swiper-navigation-color: #40C4FF;--swiper-pagination-color: #40C4FF" [autoplay]="{
       delay: 5000,
       disableOnInteraction: false
     }" [scrollbar]="true" [navigation]="true" [pagination]="{
