--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
     <app-header></app-header>
   </div>
 
+  <div class="giveaway-tracker__banner">
+    <app-banner></app-banner>
+  </div>
+
   <div class="giveaway-tracker__content">
     <router-outlet></router-outlet>
   </div>
