--- a/src/app/components/content/list-item/list-item.component.html
+++ b/src/app/components/content/list-item/list-item.component.html
@@ -1,13 +1,15 @@
 <ng-container *ngIf="giveaway">
     <mat-card routerLink="/details/{{ giveaway.id }}">
-        <img mat-card-image src="{{ giveaway.image }}" (error)="onImageLoadingFailed($event)" alt="image failed to load">
+
+        <img mat-card-image src="{{ giveaway.image }}" (error)="onImageLoadingFailed($event)"
+            alt="image failed to load">
         <mat-card-title>{{ giveaway.title }}</mat-card-title>
         <mat-card-subtitle>
             <mat-chip-list aria-label="Fish selection">
                 <mat-chip [ngStyle]="getColor(giveaway.type)">{{ giveaway.type }}</mat-chip>
             </mat-chip-list>
         </mat-card-subtitle>
-    
+
         <mat-card-content fxLayout="column" fxLayoutAlign="flex-end">
             <p class="platform">
                 {{ giveaway.platforms }}
