--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,17 +1,25 @@
-<div style="width: 100%">
-  <swiper [slidesPerView]="'auto'" [centeredSlides]="false" [autoHeight]="true"
-    [grabCursor]="true" [keyboard]="{
-enabled: true
-}" style="--swiper-navigation-color: #F7F6F2;--swiper-pagination-color: #F7F6F2" [autoplay]="{
+<mat-card class="banner">
+  <mat-card-title class="banner__title">
+    <mat-icon>fiber_new</mat-icon>
+    Check out the latest giveaways!
+  </mat-card-title>
+  <swiper [slidesPerView]="'auto'" [centeredSlides]="false" [autoHeight]="true" [grabCursor]="true"
+    [keyboard]="{enabled: true}" [autoplay]="{
 delay: 5000,
 disableOnInteraction: true
 }" [navigation]="true" [pagination]="{
 clickable: true
-}">
+}" style="--swiper-navigation-color: #40C4FF;--swiper-pagination-color: #40C4FF" *ngIf="bannerItems; else loading">
     <ng-template swiperSlide *ngFor="let bannerItem of bannerItems">
       <div class="title" data-swiper-parallax="-300">{{ bannerItem.name }}</div>
       <img src="{{ bannerItem.url}}" />
-      <button mat-raised-button class="view-button">View</button>
+      <button mat-raised-button class="view-button" routerLink="/details/{{ bannerItem.id }}">Get giveaway</button>
     </ng-template>
   </swiper>
-</div>
+</mat-card>
+
+<ng-template #loading>
+  <div class="loading">
+    <mat-spinner></mat-spinner>
+  </div>
+</ng-template>
